--- a/src/MeuPonto.Desktop/MeuPonto.Desktop.csproj
+++ b/src/MeuPonto.Desktop/MeuPonto.Desktop.csproj
@@ -1,41 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <RootNamespace>MeuPonto</RootNamespace>
-	<StartupObject></StartupObject>
-	<UserSecretsId>93db4e64-4e46-44ae-be05-3f39d4cbdc25</UserSecretsId>
-	<ApplicationIcon>favicon.ico</ApplicationIcon>
+    <StartupObject>
+    </StartupObject>
+    <UserSecretsId>93db4e64-4e46-44ae-be05-3f39d4cbdc25</UserSecretsId>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="appsettings.json" />
     <None Remove="Resources\refresh_16xLG.png" />
     <None Remove="Resources\SaveAllHS.png" />
     <None Remove="Resources\saveHS.png" />
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="favicon.ico" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\MeuPonto.EntityFrameworkCore.Cosmos\MeuPonto.EntityFrameworkCore.Cosmos.csproj" />
     <ProjectReference Include="..\System.Xaml.Extensions\System.Xaml.Extensions.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Resource Include="Resources\refresh_16xLG.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -47,7 +41,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="Modules\Empregadores\CadastroEmpregadoresWindow.xaml.cs">
       <SubType>Code</SubType>
@@ -56,5 +49,4 @@
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
-
 </Project>
