task: adiciona exibição modal

--- a/src/MeuPonto.Web/MeuPonto.Web.csproj
+++ b/src/MeuPonto.Web/MeuPonto.Web.csproj
@@ -33,4 +33,10 @@
       </Aliases>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Modules\Shared\_FormModalLayout.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
