--- a/.github/workflows/main_meuponto.yml
+++ b/.github/workflows/main_meuponto.yml
@@ -22,8 +22,14 @@ jobs:
           dotnet-version: '7.0.x'
           include-prerelease: false
 
+      - name: Install dependencies
+        run: dotnet restore src/MeuPonto.Web/MeuPonto.Web.csproj
+
       - name: Build with dotnet
-        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release
+        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release --no-restore
+
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal
 
       - name: dotnet publish
         run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
