--- a/.github/workflows/main_meuponto.yml
+++ b/.github/workflows/main_meuponto.yml
@@ -11,19 +11,25 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '7.0.x'
           include-prerelease: false
 
+      - name: Install dependencies
+        run: dotnet restore
+
       - name: Build with dotnet
-        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release
+        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release --no-restore
+
+      - name: Test
+        run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration Release --no-restore --verbosity normal
 
       - name: dotnet publish
         run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
@@ -34,7 +40,19 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
+  deploy-staging:
+    runs-on: self-hosted
+    needs: build
+    environment:
+      name: 'Staging'
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: .net-app
+
+  deploy-production:
     runs-on: windows-latest
     needs: build
     environment:
