--- a/.github/workflows/main_meuponto.yml
+++ b/.github/workflows/main_meuponto.yml
@@ -31,7 +31,7 @@ jobs:
       #   run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration Release --no-restore --verbosity normal
 
       - name: dotnet publish
-        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release --no-restore -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
