--- a/src/MeuPonto.Web_App/MeuPonto.Web_App.csproj
+++ b/src/MeuPonto.Web_App/MeuPonto.Web_App.csproj
@@ -19,6 +19,6 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MeuPonto.DocumentModel\MeuPonto.DocumentModel.csproj" />
+    <ProjectReference Include="..\MeuPonto.GlobalTableModel\MeuPonto.GlobalTableModel.csproj" />
   </ItemGroup>
 </Project>
