--- a/tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj
+++ b/tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj
@@ -6,6 +6,12 @@
     <IsPackable>false</IsPackable>
     <RootNamespace>MeuPonto</RootNamespace>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);GLOBAL_TABLE_DRIVEN</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);GLOBAL_TABLE_DRIVEN</DefineConstants>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
     <PackageReference Include="xunit" Version="2.5.0" />
