--- a/src/MeuPonto.DocumentModel/MeuPonto.DocumentModel.csproj
+++ b/src/MeuPonto.DocumentModel/MeuPonto.DocumentModel.csproj
@@ -4,6 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>MeuPonto</RootNamespace>
+    <Configurations>Debug;Release;Debug (Web+Cosmos);Release (Web+Cosmos);Debug (Web+Sqlite);Release (Web+Sqlite)</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\specs\MeuPonto.ConceptualModel\MeuPonto.ConceptualModel.csproj" />
