--- a/src/System.Xaml.Extensions/System.Xaml.Extensions.csproj
+++ b/src/System.Xaml.Extensions/System.Xaml.Extensions.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <RootNamespace>System</RootNamespace>
+    <Configurations>Debug;Release;Debug (Web+Cosmos);Release (Web+Cosmos);Debug (Web+Sqlite);Release (Web+Sqlite)</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\System.Extensions\System.Extensions.csproj" />
