ci: ajusta workflow para testes

--- a/specs/MeuPonto.Specs.Web/MeuPonto.Specs.Web.csproj
+++ b/specs/MeuPonto.Specs.Web/MeuPonto.Specs.Web.csproj
@@ -7,22 +7,22 @@
     <Configurations>Debug;Release;Debug (Web+Cosmos);Release (Web+Cosmos);Debug (Web+Sqlite);Release (Web+Sqlite)</Configurations>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLOBAL_TABLE_DRIVEN</DefineConstants>
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Sqlite)|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLOBAL_TABLE_DRIVEN</DefineConstants>
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Cosmos)|AnyCPU'">
-    <DefineConstants>$(DefineConstants);DOCUMENT_DRIVEN</DefineConstants>
+    <DefineConstants>$(DefineConstants);INFRA_COSMOS</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLOBAL_TABLE_DRIVEN</DefineConstants>
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (Web+Sqlite)|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLOBAL_TABLE_DRIVEN</DefineConstants>
+    <DefineConstants>$(DefineConstants);INFRA_SQLITE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (Web+Cosmos)|AnyCPU'">
-    <DefineConstants>$(DefineConstants);DOCUMENT_DRIVEN</DefineConstants>
+    <DefineConstants>$(DefineConstants);INFRA_COSMOS</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.0.4" />
