--- a/.github/workflows/main_meuponto_web_cosmos.yml
+++ b/.github/workflows/main_meuponto_web_cosmos.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: MeuPonto.Web
+name: MeuPonto.Web (Cosmos)
 
 on:
   pull_request:
@@ -27,11 +27,14 @@ jobs:
       - name: Build with dotnet
         run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release --no-restore
 
-      - name: Test
-        run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration Release --no-restore --verbosity normal
+      - name: Specs
+        run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration "Release (Web+Sqlite)" --verbosity normal
+
+      - name: Web tests
+        run: dotnet test tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj --configuration "Release (Web+Sqlite)" --verbosity normal
 
       - name: dotnet publish
-        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp --no-restore
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
