--- a/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
+++ b/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
@@ -6,6 +6,24 @@
     <RootNamespace>MeuPonto</RootNamespace>
     <Configurations>Debug;Release;Debug (Web+Cosmos);Release (Web+Cosmos);Debug (Web+Sqlite);Release (Web+Sqlite)</Configurations>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Cosmos)|AnyCPU'">
+    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (Web+Cosmos)|AnyCPU'">
+    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Sqlite)|AnyCPU'">
+    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (Web+Sqlite)|AnyCPU'">
+    <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
+  </PropertyGroup>
   <ItemGroup>
     <None Remove="specflow.json" />
   </ItemGroup>
@@ -29,7 +47,12 @@
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Cosmos)|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release (Web+Cosmos)|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Sqlite)|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release (Web+Sqlite)|AnyCPU'" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Modules\Pontos\Comprovantes\BackupComprovantes.feature.cs">
