--- a/specs/MeuPonto.ConceptualModel/MeuPonto.ConceptualModel.csproj
+++ b/specs/MeuPonto.ConceptualModel/MeuPonto.ConceptualModel.csproj
@@ -3,6 +3,6 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>MeuPonto</RootNamespace>
-    <Configurations>Debug;Release;Debug (Web+Cosmos);Release (Web+Cosmos);Debug (Web+Sqlite);Release (Web+Sqlite)</Configurations>
+    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
   </PropertyGroup>
 </Project>
