--- a/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
+++ b/specs/MeuPonto.Specs/MeuPonto.Specs.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>MeuPonto</RootNamespace>
-    <Configurations>Debug;Release;Debug (Web+Cosmos);Release (Web+Cosmos);Debug (Web+Sqlite);Release (Web+Sqlite)</Configurations>
+    <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
@@ -11,16 +11,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Cosmos)|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Cosmos|AnyCPU'">
     <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (Web+Cosmos)|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_Web_Cosmos|AnyCPU'">
     <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Sqlite)|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Sqlite|AnyCPU'">
     <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (Web+Sqlite)|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_Web_Sqlite|AnyCPU'">
     <DefineConstants>$(DefineConstants);SPECS_WEB</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
@@ -48,10 +48,10 @@
   <ItemGroup>
     <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
     <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Cosmos)|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release (Web+Cosmos)|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug (Web+Sqlite)|AnyCPU'" />
-    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release (Web+Sqlite)|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Cosmos|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release_Web_Cosmos|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Debug_Web_Sqlite|AnyCPU'" />
+    <ProjectReference Include="..\MeuPonto.Specs.Web\MeuPonto.Specs.Web.csproj" Condition="'$(Configuration)|$(Platform)'=='Release_Web_Sqlite|AnyCPU'" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Modules\Pontos\Comprovantes\BackupComprovantes.feature.cs">
