Revert "build: remove warnings de nullable"
This reverts commit 1a7e89c4b651c56e191b758b5a13c1e59bef3b98.

--- a/src/MeuPonto.WebApi/MeuPonto.WebApi.csproj
+++ b/src/MeuPonto.WebApi/MeuPonto.WebApi.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>MeuPonto</RootNamespace>
     <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
