--- a/tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj
+++ b/tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <RootNamespace>MeuPonto</RootNamespace>
     <Configurations>Debug;Release;Debug_Web_Cosmos;Release_Web_Cosmos;Debug_Web_Sqlite;Release_Web_Sqlite</Configurations>
